# equilux

./: .gitmodules  README.md  mkdocs.yaml  pyproject.toml
docs/: index.md
docs/hardware/: devices.md  modules.md
docs/stylesheets/: brand.css
