[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "equilux"
version = "0.1.1"
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "Apache 2.0" }
keywords = [
  "quantum",
  "computing",
  "analog",
  "digitial",
  "atomic",
  "simulation",
  "full-stack",
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research ",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Security :: Cryptography",
  "Topic :: Scientific/Engineering :: Information Analysis",

  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


dependencies = [
  "matplotlib",
  "seaborn",
  "oqd-compiler-infrastructure@git+https://github.com/openquantumdesign/oqd-compiler-infrastructure",
  "oqd-core @ git+https://github.com/openquantumdesign/oqd-core",
  "oqd-analog-emulator @ git+https://github.com/openquantumdesign/oqd-analog-emulator",
  "oqd-cloud @ git+https://github.com/openquantumdesign/oqd-cloud",
]

[project.optional-dependencies]
docs = [
  "pymdown-extensions",
  "mkdocstrings",
  "mkdocs-material",
  "mkdocstrings-python",
  "mdx_truly_sane_lists",
  "jupyter==1.1.1",
  "jupyter_contrib_nbextensions==0.7.0",
  "mkdocs-jupyter==0.25.0",
  "mkdocs-monorepo-plugin",
  "notebook==6.4.12",
]

[project.urls]
Homepage = "https://github.com/OpenQuantumDesign/equilux"
Documentation = "https://docs.openquantumdesign.org"
Repository = "https://github.com/OpenQuantumDesign/equilux.git"
Issues = "https://github.com/OpenQuantumDesign/equilux/issues"

[dependency-groups]
dev = ["pre-commit>=4.1.0"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["ALL"]
